--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,15 @@
         android:theme="@style/Theme.ComponentesDeInterface"
         tools:targetApi="31">
         <activity
+            android:name=".SegundActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
+            android:screenOrientation=""
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
