--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.ComponentesDeInterface"
         tools:targetApi="31">
         <activity
-            android:name=".SegundActivity"
+            android:name=".SegundaActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
